--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>
-            <a href="test/index.html">
+            <a href="./test/index.html">
                 Go to "Hello" page.
             </a>
         </h1>
