edit start index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
             <a href="./test/index.html">
                 Go to "Hello" page.
             </a>
+            <a href="./Ukraine/index.html">
+                Go to "Ukraine flag" page.
+            </a>
         </h1>
     </body>
 </html>
