--- a/Task (18.07) Classwork/index.html
+++ b/Task (18.07) Classwork/index.html
@@ -3,49 +3,67 @@
     <head>
         <meta charset="utf-8">
         <title>Task 18.07 Classwork</title>
-        <link rel="stylesheet" href="style/normalize.css">
+        <!--<link rel="stylesheet" href="style/normalize.css">-->
         <link rel="stylesheet" href="style/style.css">
     </head>
 
     <body>
+        <!--<div class="allmenu">
         <div class="dropdown">
-            <div class="mainmenu">Item1</div>
+            <div class="mainmenu">item 1</div>
             <div class="dropdown-child">
-                <a href="#">Menu1</a>
-                <a href="#">Menu2</a>
-                <a href="#">Menu3</a>
-                <a href="#">Menu4</a>
+                <a href="#">menu1</a>
+                <a href="#">menu1</a>
+                <a href="#">menu1</a>
             </div>
         </div>
 
         <div class="dropdown">
-                <div class="mainmenu">Item2</div>
+                <div class="mainmenu">item 2</div>
                 <div class="dropdown-child">
-                    <a href="#">Menu1</a>
-                    <a href="#">Menu2</a>
-                    <a href="#">Menu3</a>
-                    <a href="#">Menu4</a>
+                    <a href="#">menu2</a>
+                    <a href="#">menu2</a>
+                    <a href="#">menu2</a>
                 </div>
         </div>
 
         <div class="dropdown">
-                <div class="mainmenu">Item3</div>
+                <div class="mainmenu">item 3</div>
                 <div class="dropdown-child">
-                    <a href="#">Menu1</a>
-                    <a href="#">Menu2</a>
-                    <a href="#">Menu3</a>
-                    <a href="#">Menu4</a>
+                    <a href="#">menu3</a>
+                    <a href="#">menu3</a>
+                    <a href="#">menu3</a>
                 </div>
-        </div>
+        </div>-->
 
-        <div class="dropdown">
-                <div class="mainmenu">Item4</div>
-                <div class="dropdown-child">
-                    <a href="#">Menu1</a>
-                    <a href="#">Menu2</a>
-                    <a href="#">Menu3</a>
-                    <a href="#">Menu4</a>
-                </div>
-        </div>
+
+        <nav id="menuVertical">
+            <ul>
+                <li><a href="#">item 1</a>
+                    <ul>
+                        <li><a href="#">menu1</a></li>
+                        <li><a href="#">menu2</a></li>
+                        <li><a href="#">menu3</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">item 2</a>
+                    <ul>
+                        <li><a href="#">menu1</a></li>
+                        <li><a href="#">menu2</a></li>
+                        <li><a href="#">menu3</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">item 3</a>
+                    <ul>
+                        <li><a href="#">menu1</a></li>
+                        <li><a href="#">menu2</a></li>
+                        <li><a href="#">menu3</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+
+
+
     </body>
 </html>
