edit html and css files for task 21.07 (add cards, table and card content)

--- a/Task (21.07)/index.html
+++ b/Task (21.07)/index.html
@@ -9,7 +9,19 @@
     </head>
 
     <body>
-        <div>
+        <div class="table">
+
+            <div class="card">  <div class="card_content">1</div>   </div>
+            <div class="card">  <div class="card_content">2</div>   </div>
+            <div class="card">  <div class="card_content">3</div>   </div>
+            <div class="card">  <div class="card_content">4</div>   </div>
+            <div class="card">  <div class="card_content">5</div>   </div>
+            <div class="card">  <div class="card_content">6</div>   </div>
+            <div class="card">  <div class="card_content">7</div>   </div>
+            <div class="card">  <div class="card_content">8</div>   </div>
+            <div class="card">  <div class="card_content">9</div>   </div>
+            <div class="card">  <div class="card_content">10</div>  </div>
+
             
         </div>
     </body>
