add animation to cards hover

--- a/Task (21.07)/index.html
+++ b/Task (21.07)/index.html
@@ -11,16 +11,16 @@
     <body>
         <div class="table">
 
-            <div class="card">  <div class="card_content">1</div>   </div>
-            <div class="card">  <div class="card_content">2</div>   </div>
-            <div class="card">  <div class="card_content">3</div>   </div>
-            <div class="card">  <div class="card_content">4</div>   </div>
-            <div class="card">  <div class="card_content">5</div>   </div>
-            <div class="card">  <div class="card_content">6</div>   </div>
-            <div class="card">  <div class="card_content">7</div>   </div>
-            <div class="card">  <div class="card_content">8</div>   </div>
-            <div class="card">  <div class="card_content">9</div>   </div>
-            <div class="card">  <div class="card_content">10</div>  </div>
+            <div class="card">  <div class="card_content_front">1</div>   <div class="card_content_back" id="cardb1"></div>   </div>
+            <div class="card">  <div class="card_content_front">2</div>   <div class="card_content_back" id="cardb2"></div>   </div>
+            <div class="card">  <div class="card_content_front">3</div>   <div class="card_content_back" id="cardb3"></div>   </div>
+            <div class="card">  <div class="card_content_front">4</div>   <div class="card_content_back" id="cardb4"></div>   </div>
+            <div class="card">  <div class="card_content_front">5</div>   <div class="card_content_back" id="cardb5"></div>   </div>
+            <div class="card">  <div class="card_content_front">6</div>   <div class="card_content_back" id="cardb6"></div>   </div>
+            <div class="card">  <div class="card_content_front">7</div>   <div class="card_content_back" id="cardb7"></div>   </div>
+            <div class="card">  <div class="card_content_front">8</div>   <div class="card_content_back" id="cardb8"></div>   </div>
+            <div class="card">  <div class="card_content_front">9</div>   <div class="card_content_back" id="cardb9"></div>   </div>
+            <div class="card">  <div class="card_content_front">10</div>  <div class="card_content_back" id="cardb10"></div>   </div>
 
             
         </div>
