--- a/Task (21.07)/index.html
+++ b/Task (21.07)/index.html
@@ -1,28 +1,109 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Task 21.07</title>
-        <link rel="stylesheet" href="style/normalize.css">
-        <link rel="stylesheet" href="style/style.css">
-        
-    </head>
 
-    <body>
-        <div class="table">
+<head>
+    <meta charset="utf-8">
+    <title>Task 21.07</title>
+    <link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="style/style.css">
 
-            <div class="card">  <div class="card_content_front">1</div>   <div class="card_content_back" id="cardb1"></div>   </div>
-            <div class="card">  <div class="card_content_front">2</div>   <div class="card_content_back" id="cardb2"></div>   </div>
-            <div class="card">  <div class="card_content_front">3</div>   <div class="card_content_back" id="cardb3"></div>   </div>
-            <div class="card">  <div class="card_content_front">4</div>   <div class="card_content_back" id="cardb4"></div>   </div>
-            <div class="card">  <div class="card_content_front">5</div>   <div class="card_content_back" id="cardb5"></div>   </div>
-            <div class="card">  <div class="card_content_front">6</div>   <div class="card_content_back" id="cardb6"></div>   </div>
-            <div class="card">  <div class="card_content_front">7</div>   <div class="card_content_back" id="cardb7"></div>   </div>
-            <div class="card">  <div class="card_content_front">8</div>   <div class="card_content_back" id="cardb8"></div>   </div>
-            <div class="card">  <div class="card_content_front">9</div>   <div class="card_content_back" id="cardb9"></div>   </div>
-            <div class="card">  <div class="card_content_front">10</div>  <div class="card_content_back" id="cardb10"></div>   </div>
+</head>
 
-            
+<body>
+    <div class="table">
+
+        <div class="card">
+            <div class="card_content_front"></div>
+            <div class="card_content_back" id="cardb6_1_Ч">
+                <h2 class="topsign">6</h2>
+                <h1>ProCode</h1>
+                <h2 class="botsign">6</h2>
+            </div>
         </div>
-    </body>
+
+        <div class="card">
+            <div class="card_content_front"></div>
+            <div class="card_content_back" id="cardb6_2_П">
+                <h2 class="topsign">6</h2>
+                <h1>ProCode</h1>
+                <h2 class="botsign">6</h2>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_content_front"></div>
+            <div class="card_content_back" id="cardb10_Б">
+                <h2 class="topsign">10</h2>
+                <h1>ProCode</h1>
+                <h2 class="botsign">10</h2>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_content_front"></div>
+            <div class="card_content_back" id="cardbВ_П">
+                <h2 class="topsign">В</h2>
+                <h1>ProCode</h1>
+                <h2 class="botsign">В</h2>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_content_front"></div>
+            <div class="card_content_back" id="cardbД_П">
+                <h2 class="topsign">Д</h2>
+                <h1>ProCode</h1>
+                <h2 class="botsign">Д</h2>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_content_front"></div>
+            <div class="card_content_back" id="cardbК_П">
+                <h2 class="topsign">К</h2>
+                <h1>ProCode</h1>
+                <h2 class="botsign">К</h2>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_content_front"></div>
+            <div class="card_content_back" id="cardbТ_Ч">
+                <h2 class="topsign">Т</h2>
+                <h1>ProCode</h1>
+                <h2 class="botsign">Т</h2>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_content_front"></div>
+            <div class="card_content_back" id="cardbТ_Б">
+                <h2 class="topsign">Т</h2>
+                <h1>ProCode</h1>
+                <h2 class="botsign">Т</h2>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_content_front"></div>
+            <div class="card_content_back" id="cardbТ_К">
+                <h2 class="topsign">Т</h2>
+                <h1>ProCode</h1>
+                <h2 class="botsign">Т</h2>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card_content_front"></div>
+            <div class="card_content_back" id="cardbТ_П">
+                <h2 class="topsign">Т</h2>
+                <h1>ProCode</h1>
+                <h2 class="botsign">Т</h2>
+            </div>
+        </div>
+
+
+    </div>
+</body>
+
 </html>
