add card signs and rotate bot card elem

--- a/Task (21.07)/index.html
+++ b/Task (21.07)/index.html
@@ -16,7 +16,9 @@
             <div class="card_content_front"></div>
             <div class="card_content_back" id="cardb6_1_Ч">
                 <h2 class="topsign">6</h2>
+                <div class="heart top"></div>
                 <h1>ProCode</h1>
+                <div class="heart bot"></div>
                 <h2 class="botsign">6</h2>
             </div>
         </div>
@@ -25,17 +27,21 @@
             <div class="card_content_front"></div>
             <div class="card_content_back" id="cardb6_2_П">
                 <h2 class="topsign">6</h2>
+                <div class="spade top"></div>
                 <h1>ProCode</h1>
+                <div class="spade bot"></div>
                 <h2 class="botsign">6</h2>
             </div>
         </div>
 
         <div class="card">
             <div class="card_content_front"></div>
-            <div class="card_content_back" id="cardb10_Б">
-                <h2 class="topsign">10</h2>
+            <div class="card_content_back" id="cardb8_Б">
+                <h2 class="topsign">8</h2>
+                <div class="diamond top"></div>
                 <h1>ProCode</h1>
-                <h2 class="botsign">10</h2>
+                <div class="diamond bot"></div>
+                <h2 class="botsign">8</h2>
             </div>
         </div>
 
@@ -43,7 +49,9 @@
             <div class="card_content_front"></div>
             <div class="card_content_back" id="cardbВ_П">
                 <h2 class="topsign">В</h2>
+                <div class="spade top"></div>
                 <h1>ProCode</h1>
+                <div class="spade bot"></div>
                 <h2 class="botsign">В</h2>
             </div>
         </div>
@@ -52,7 +60,9 @@
             <div class="card_content_front"></div>
             <div class="card_content_back" id="cardbД_П">
                 <h2 class="topsign">Д</h2>
+                <div class="spade top"></div>
                 <h1>ProCode</h1>
+                <div class="spade bot"></div>
                 <h2 class="botsign">Д</h2>
             </div>
         </div>
@@ -61,7 +71,9 @@
             <div class="card_content_front"></div>
             <div class="card_content_back" id="cardbК_П">
                 <h2 class="topsign">К</h2>
+                <div class="spade top"></div>
                 <h1>ProCode</h1>
+                <div class="spade bot"></div>
                 <h2 class="botsign">К</h2>
             </div>
         </div>
@@ -70,7 +82,9 @@
             <div class="card_content_front"></div>
             <div class="card_content_back" id="cardbТ_Ч">
                 <h2 class="topsign">Т</h2>
+                <div class="heart top"></div>
                 <h1>ProCode</h1>
+                <div class="heart bot"></div>
                 <h2 class="botsign">Т</h2>
             </div>
         </div>
@@ -79,7 +93,9 @@
             <div class="card_content_front"></div>
             <div class="card_content_back" id="cardbТ_Б">
                 <h2 class="topsign">Т</h2>
+                <div class="diamond top"></div>
                 <h1>ProCode</h1>
+                <div class="diamond bot"></div>
                 <h2 class="botsign">Т</h2>
             </div>
         </div>
@@ -88,7 +104,9 @@
             <div class="card_content_front"></div>
             <div class="card_content_back" id="cardbТ_К">
                 <h2 class="topsign">Т</h2>
+                <div class="club top"></div>
                 <h1>ProCode</h1>
+                <div class="club bot"></div>
                 <h2 class="botsign">Т</h2>
             </div>
         </div>
@@ -97,7 +115,9 @@
             <div class="card_content_front"></div>
             <div class="card_content_back" id="cardbТ_П">
                 <h2 class="topsign">Т</h2>
+                <div class="spade top"></div>
                 <h1>ProCode</h1>
+                <div class="spade bot"></div>
                 <h2 class="botsign">Т</h2>
             </div>
         </div>
