--- a/Task (24.07)/index.html
+++ b/Task (24.07)/index.html
@@ -17,39 +17,63 @@
                 <img src="img/logo.jpg" width="100" height="100" alt="logo">
             </div>
 
+
             <div class="menu">
-                <div class="item">menu1
 
-                    <div class="subitem">item1</div>
 
-                    <div class="subitem">item1</div>
+                <div class="temp_menu">
 
-                    <div class="subitem">item1</div>
+                    <div class="item_name">menu1</div>
+                    <div class="item">
 
-                </div>
+                        
 
-                <div class="item">menu2_long_menu
+                        <div class="subitem"><img class="umbrella" src="./img/umbrella.png" width="15" height="15" alt="U">item1</div>
 
-                    <div class="subitem">item2</div>
+                        <div class="subitem"><img class="umbrella" src="./img/umbrella.png" width="15" height="15" alt="U">item1</div>
 
-                    <div class="subitem">item2_long_text</div>
+                        <div class="subitem"><img class="umbrella" src="./img/umbrella.png" width="15" height="15" alt="U">item1</div>
 
-                    <div class="subitem">item2</div>
-
-                </div>
-
-                <div class="item">menu3
-
-                    <div class="subitem">item3</div>
-
-                    <div class="subitem">item3</div>
-
-                    <div class="subitem">item3</div>
+                    </div>
 
                 </div>
 
-            </nav>
-        </div>
+                <div class="temp_menu">
+
+                    <div class="item_name">menu2_long_menu</div>
+                    <div class="item">
+
+                        <div class="subitem"><img class="umbrella" src="./img/umbrella.png" width="15" height="15" alt="U">item2</div>
+
+                        <div class="subitem"><img class="umbrella" src="./img/umbrella.png" width="15" height="15" alt="U">item2_long_text</div>
+
+                        <div class="subitem"><img class="umbrella" src="./img/umbrella.png" width="15" height="15" alt="U">item2</div>
+
+                        <div class="subitem"><img class="umbrella" src="./img/umbrella.png" width="15" height="15" alt="U">item2</div>
+
+                    </div>
+
+
+
+                </div>
+
+                <div class="temp_menu">
+
+                    <div class="item_name">menu3</div>
+                    <div class="item">
+
+                        <div class="subitem"><img class="umbrella" src="./img/umbrella.png" width="15" height="15" alt="U">item3</div>
+
+                        <div class="subitem"><img class="umbrella" src="./img/umbrella.png" width="15" height="15" alt="U">item3</div>
+
+                        <div class="subitem"><img class="umbrella" src="./img/umbrella.png" width="15" height="15" alt="U">item3</div>
+
+                    </div>
+
+                </div>
+
+
+            </div>
 
     </header>
 
