--- a/Task (25.07) Classwork/index.html
+++ b/Task (25.07) Classwork/index.html
@@ -12,7 +12,6 @@
     <body>
         <div class="main">
             
-
             <h1 id="text">COMING SOON</h1>
             <h2 id="subtext">SUBSCRIBE TO GET NOTIFIED ON UPDATES</h2>
             <div class="subscribe">
@@ -22,7 +21,7 @@
 
             <img src="/Task (25.07) Classwork/img/cloud1.png" id="cloud1">
             <img src="/Task (25.07) Classwork/img/cloud2.png" id="cloud2">
-            <img src="/Task (25.07) Classwork/img/ship.png" id="ship">
+            <img class="ship" src="/Task (25.07) Classwork/img/ship.png" id="ship">
             <img src="/Task (25.07) Classwork/img/ice.png" id="ice">
 
 
