--- a/Task (25.07) Classwork/index.html
+++ b/Task (25.07) Classwork/index.html
@@ -12,7 +12,7 @@
         <div class="main">
             
             <h1 id="text">COMING SOON</h1>
-            <h2 id="subtext">SUBSCRIBE TO GET NOTIFIED ON UPDATES</h2>
+            <h2 id="subtext">SUBSCRIBE TO GET NOTIFIED ON UPDАTES</h2>
             <div class="subscribe">
                 <div class="email_row">Type your e-mail adress</div>
                 <button>SUBSCRIBE</button>
@@ -27,7 +27,7 @@
 
             <div class="datetime" id="days">
                     <h3>113</h3>
-                    <h4>DAYS</h4>
+                    <h4>DАYS</h4>
                 </div>
     
                 <div class="datetime" id="hours">
