complete task 01.08 (rework task 24.07)

--- a/Task (24.07)/index.html
+++ b/Task (24.07)/index.html
@@ -20,10 +20,9 @@
 
             <div class="menu">
 
-
                 <div class="temp_menu">
 
-                    <div class="item_name">menu1</div>
+                    <div class="item_name">menu1_veeeeery_loooong_menu</div>
                     <div class="item">
 
                         
@@ -43,7 +42,7 @@
                     <div class="item_name">menu2_long_menu</div>
                     <div class="item">
 
-                        <div class="subitem"><img class="umbrella" src="./img/umbrella.png" width="15" height="15" alt="U">item2</div>
+                        <div class="subitem"><img class="umbrella" src="./img/umbrella.png" width="15" height="15" alt="U">item2_loooooooooooong</div>
 
                         <div class="subitem"><img class="umbrella" src="./img/umbrella.png" width="15" height="15" alt="U">item2_long_text</div>
 
@@ -72,8 +71,9 @@
 
                 </div>
 
-
             </div>
+
+        </div>
 
     </header>
 
