work at task 01.08, pixel perfect

--- a/Task (01.08) Classwork/index.html
+++ b/Task (01.08) Classwork/index.html
@@ -14,32 +14,62 @@
     <div class="header">
 
         <div class="left_line">
-            <img class="logo_img" src="./res/logo.png" alt="CS:GO">
-            <div class="search">Поиск по сайту</div>
-            <div class="left_line_line"></div>
-            <div class="online_info">
-                <h3>1337</h3>
-                <h4>Игрока онлайн</h4>
+            <div class="subline">
+                <img class="logo_img" src="./res/logo.png" alt="CS:GO">
+                <img class="logo_butt" src="res/else/logobutt.png">
+            </div>
+            <div class="subline">
+                <div class="search_line">
+                    <div class="search">Поиск по сайту</div>
+                    <img class="search_sign" src="res/else/searchbutt.png">
+                </div>
+                <div class="left_line_line"></div>
+                <div class="online_info">
+                    <h3>1337</h3>
+                    <h4>Игрока онлайн</h4>
+                </div>
             </div>
         </div>
 
 
         <div class="short_acc_info">
-            <img class="player_icon" src="./res/acc_img.png" alt="avatar">
+            <img class="player_icon" src="./res/player_icons/MyIcon.png" alt="avatar">
             <h4>OceanD</h4>
             <h3>50 000 CC</h3>
+            <img class="logo_butt2" src="res/else/logobutt.png">
         </div>
     </div>
 
     <div class="left_panel">
 
-        <div class="panel_button" id="">Игра</div>
-        <div class="panel_button" id="">Команды</div>
-        <div class="panel_button" id="">Рейтинг</div>
-        <div class="panel_button" id="">Ладдер</div>
-        <div class="panel_button" id="">Розыгрыши</div>
-        <div class="panel_button" id="">Бан-лист</div>
-        <div class="panel_button" id="">FAQ</div>
+        <div class="panel_button" id="active_button">
+            <img class="" src="./res/left_menu/Game.png">
+            <h4>Игра</h4>
+        </div>
+        <div class="panel_button" id="butt2">
+            <img class="" src="./res/left_menu/Teams.png">
+            <h4>Команды</h4>
+        </div>
+        <div class="panel_button" id="butt3">
+            <img class="" src="./res/left_menu/Rating.png">
+            <h4>Рейтинг</h4>
+        </div>
+        <div class="panel_button" id="butt4">
+            <img class="" src="./res/left_menu/Ladder.png">
+            <h4>Ладдер</h4>
+        </div>
+        <div class="panel_button" id="butt5">
+            <img class="" src="./res/left_menu/Prices.png">
+            <h4>Розыгрыши</h4>
+        </div>
+        <div class="panel_button" id="butt6">
+            <img class="" src="./res/left_menu/BanList.png">
+            <h4>Бан-лист</h4>
+        </div>
+        <div class="panel_button" id="butt7">
+            <img class="" src="./res/left_menu/FAQ.png">
+            <h4>FAQ</h4>
+        </div>
     </div>
 
     <div class="main">
@@ -179,33 +209,45 @@
     <div class="right_panel">
 
         <div class="match">
-            <div class="first_opponent" id="submatch">SaWyer <h4>+10 000 CC</h4></div>
-            <div class="vs" id="submatch">VS <h3>16:5</h3></div>
-            <div class="second_opponent"    id="submatch">le4oz22</div>
+            <div class="first_opponent" id="submatch">SaWyer <h4>+10 000 CC</h4>
+            </div>
+            <div class="vs" id="submatch">VS <h3>16:5</h3>
+            </div>
+            <div class="second_opponent" id="submatch">le4oz22</div>
         </div>
         <div class="match">
             <div class="first_opponent" id="submatch">VanyaKiller</div>
-            <div class="vs" id="submatch">VS <h3>12:16</h3></div>
-            <div class="second_opponent"    id="submatch">F1stM4n <h4>+ 5 000 CC</h4></div>
+            <div class="vs" id="submatch">VS <h3>12:16</h3>
+            </div>
+            <div class="second_opponent" id="submatch">F1stM4n <h4>+ 5 000 CC</h4>
+            </div>
         </div>
         <div class="match">
-            <div class="first_opponent" id="submatch">Shadow52 <h4>+ 15 000 CC</h4></div>
-            <div class="vs" id="submatch">VS<h3>16:5</h3></div>
-            <div class="second_opponent"    id="submatch">le4oz22</div>
+            <div class="first_opponent" id="submatch">Shadow52 <h4>+ 15 000 CC</h4>
+            </div>
+            <div class="vs" id="submatch">VS<h3>16:5</h3>
+            </div>
+            <div class="second_opponent" id="submatch">le4oz22</div>
         </div>
         <div class="match">
             <div class="first_opponent" id="submatch">VanyaKiller</div>
-            <div class="vs" id="submatch">VS<h3>12:6</h3></div>
-            <div class="second_opponent"    id="submatch">F1stM4n <h4>+ 5 000 CC</h4></div>
+            <div class="vs" id="submatch">VS<h3>12:6</h3>
+            </div>
+            <div class="second_opponent" id="submatch">F1stM4n <h4>+ 5 000 CC</h4>
+            </div>
         </div>
         <div class="match">
-            <div class="first_opponent" id="submatch">Shadow52 <h4>+ 15 000 CC</h4></div>
-            <div class="vs" id="submatch">VS <h3>16:5</h3></div>
-            <div class="second_opponent"    id="submatch">le4oz22</div>
+            <div class="first_opponent" id="submatch">Shadow52 <h4>+ 15 000 CC</h4>
+            </div>
+            <div class="vs" id="submatch">VS <h3>16:5</h3>
+            </div>
+            <div class="second_opponent" id="submatch">le4oz22</div>
         </div>
         <div class="match">
-            <div class="first_opponent" id="submatch">Shadow52 <h4>+15 000 CC</h4></div>
-            <div class="vs" id="submatch">VS <h3>16:5</h3></div>
+            <div class="first_opponent" id="submatch">Shadow52 <h4>+15 000 CC</h4>
+            </div>
+            <div class="vs" id="submatch">VS <h3>16:5</h3>
+            </div>
             <div class="second_opponent" id="submatch">le4ozz22</div>
         </div>
 
