finish right panel

--- a/Task (01.08) Classwork/index.html
+++ b/Task (01.08) Classwork/index.html
@@ -150,7 +150,7 @@
                 <h4 id="nickname">OceanD</h4>
                 <div class="game_status_line">
                     <div id="game_status">
-                        <h5 id="status_online">Статус:</h5> 
+                        <h5 id="status_online">Статус:</h5>
                         <h5>В игре</h5>
                     </div>
                 </div>
@@ -159,12 +159,12 @@
             <div class="custom_line_mode_profile"></div>
             <div class="winrate">
                 <div id="winrate_name">Винрейт:</div>
-                <div class="winrate_progress"> 
+                <div class="winrate_progress">
                     <div class="winrate_progress_bar">
                         <div class="winrate_progress_bar_completed"></div>
                     </div>
                     <h5 id="winrate_icon">62%</h5>
-                    </div>
+                </div>
 
             </div>
             <div class="profile_stats_additional">
@@ -265,47 +265,90 @@
 
     <div class="right_panel">
 
-        <div class="match">
-            <div class="first_opponent" id="submatch">SaWyer <h4>+10 000 CC</h4>
+        <div class="custom_line_rp"><div class="custom_line_rp_active"></div></div>
+
+        <div class="match" id="match1">
+            <div class="block_rp block_left">
+                <img class="opponent_image" src="./res/players/SaWyer/Group 2.1SaWyer.png">
+                <div class="first_opponent">SaWyer <h4>+10 000 CC</h4>
+                </div>
             </div>
-            <div class="vs" id="submatch">VS <h3>16:5</h3>
+
+            <div class="vs">VS <h3>16:5</h3>
             </div>
-            <div class="second_opponent" id="submatch">le4oz22</div>
-        </div>
-        <div class="match">
-            <div class="first_opponent" id="submatch">VanyaKiller</div>
-            <div class="vs" id="submatch">VS <h3>12:16</h3>
-            </div>
-            <div class="second_opponent" id="submatch">F1stM4n <h4>+ 5 000 CC</h4>
-            </div>
-        </div>
-        <div class="match">
-            <div class="first_opponent" id="submatch">Shadow52 <h4>+ 15 000 CC</h4>
-            </div>
-            <div class="vs" id="submatch">VS<h3>16:5</h3>
-            </div>
-            <div class="second_opponent" id="submatch">le4oz22</div>
-        </div>
-        <div class="match">
-            <div class="first_opponent" id="submatch">VanyaKiller</div>
-            <div class="vs" id="submatch">VS<h3>12:6</h3>
-            </div>
-            <div class="second_opponent" id="submatch">F1stM4n <h4>+ 5 000 CC</h4>
+
+            <div class="block_rp block_right">
+                <img class="opponent_image" src="./res/players/le40z22/Group 2.2le4oz22.png">
+                <div class="second_opponent">le4oz22</div>
             </div>
         </div>
-        <div class="match">
-            <div class="first_opponent" id="submatch">Shadow52 <h4>+ 15 000 CC</h4>
+        <div class="match" id="match2">
+            <div class="block_rp block_left">
+                <img class="opponent_image" src="./res/players/VanyaKiller/Group 2.1VanyaKiller.png">
+                <div class="first_opponent">VanyaKiller</div>
             </div>
-            <div class="vs" id="submatch">VS <h3>16:5</h3>
+
+            <div class="vs">VS <h3>12:16</h3>
             </div>
-            <div class="second_opponent" id="submatch">le4oz22</div>
+
+            <div class="block_rp block_right">
+                <img class="opponent_image" src="./res/players/F1stM4n/Group 2.2F1stM4n.png">
+                <div class="second_opponent">F1stM4n <h4>+ 5 000 CC</h4>
+                </div>
+            </div>
+
         </div>
-        <div class="match">
-            <div class="first_opponent" id="submatch">Shadow52 <h4>+15 000 CC</h4>
+        <div class="match" id="match3">
+            <div class="block_rp block_left">
+                <img class="opponent_image" src="./res/players/Shadow52/Group 2.1Shadow52.png">
+                <div class="first_opponent">Shadow52 <h4>+ 15 000 CC</h4>
+                </div>
             </div>
-            <div class="vs" id="submatch">VS <h3>16:5</h3>
+            <div class="vs">VS<h3>16:5</h3>
             </div>
-            <div class="second_opponent" id="submatch">le4ozz22</div>
+            <div class="block_rp block_right">
+                <img class="opponent_image" src="./res/players/le40z22/Group 2.2le4oz22.png">
+                <div class="second_opponent">le4oz22</div>
+            </div>
+        </div>
+        <div class="match" id="match4">
+            <div class="block_rp block_left">
+                <img class="opponent_image" src="./res/players/VanyaKiller/Group 2.1VanyaKiller.png">
+                <div class="first_opponent">VanyaKiller</div>
+            </div>
+            <div class="vs">VS<h3>12:6</h3>
+            </div>
+            <div class="block_rp block_right">
+                <img class="opponent_image" src="./res/players/F1stM4n/Group 2.2F1stM4n.png">
+                <div class="second_opponent">F1stM4n <h4>+ 5 000 CC</h4>
+                </div>
+            </div>
+        </div>
+        <div class="match" id="match5">
+            <div class="block_rp block_left">
+                <img class="opponent_image" src="./res/players/Shadow52/Group 2.1Shadow52.png">
+                <div class="first_opponent">Shadow52 <h4>+ 15 000 CC</h4>
+                </div>
+            </div>
+            <div class="vs">VS <h3>16:5</h3>
+            </div>
+            <div class="block_rp block_right">
+                <img class="opponent_image" src="./res/players/le40z22/Group 2.2le4oz22.png">
+                <div class="second_opponent">le4oz22</div>
+            </div>
+        </div>
+        <div class="match" id="match6">
+            <div class="block_rp block_left">
+                <img class="opponent_image" src="./res/players/Shadow52/Group 2.1Shadow52.png">
+                <div class="first_opponent">Shadow52 <h4>+15 000 CC</h4>
+                </div>
+            </div>
+            <div class="vs">VS <h3>16:5</h3>
+            </div>
+            <div class="block_rp block_right">
+                <img class="opponent_image" src="./res/players/le40z22/Group 2.2le4oz22.png">
+                <div class="second_opponent">le4ozz22</div>
+            </div>
         </div>
 
         <div class="backdrop"></div>
