--- a/Task (07.08)/index.html
+++ b/Task (07.08)/index.html
@@ -26,12 +26,7 @@
             <div class="data_block">
 
                 <div class="time_set">
-                    <div class="time_to_start">
-                        --:--
-                    </div>
-                    <div class="timer_sign">
-                        <div class="icon-stopwatch"></div>
-                    </div>
+                    <input type="time" class="time_to_start"></input>
                 </div>
                 <div class="start_button">
                     <input type="checkbox"><div class="icon-play"></div></input>
