--- a/Task (11.08) Classwork/index.html
+++ b/Task (11.08) Classwork/index.html
@@ -6,8 +6,9 @@
         <link rel="stylesheet" href="style/style.css">
     </head>
     <body>
-        <div class="card">
-            <img src="./img/playing-card.jpg">
+        <div class="clock">
+            <div class="arrow"></div>
         </div>
+
     </body>
 </html>
