--- a/Task (15.08) Classwork/index.html
+++ b/Task (15.08) Classwork/index.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
+    <div id="custom_line"></div>
     <div class="main">
-
+        
         <div class="header">
-
+            
             <div class="header_top">
                 <h3 id="feedback">Обратная связь</h3>
                 <h3 id="login">Войти</h3>
@@ -22,7 +23,7 @@
             <div class="header_bott">
 
                 <div class="menu">
-                    menu
+                    <img src="res/menu-options.png">
                 </div>
 
                 <div class="right_part">
