--- a/Task (22.08) Classwork/index.html
+++ b/Task (22.08) Classwork/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="info">
                 <a href="#">about</a>
-                <a href="#">scss</a>
+                <a href="https://github.com/AlexandrBerbat/AlexandrBerbat.github.io/blob/master/Task%20(22.08)%20Classwork/style/style.scss">scss</a>
             </div>
         </header>
 
@@ -30,8 +30,14 @@
             </section>
 
             <section class="section_right_top">
-                <article class="a1_right_top"></article>
-                <article class="a2_right_top"></article>
+                <article class="a1_right_top">
+                    <div class="rt_text">Lorem ipsum dolor</div>
+                    <img class="rt_img" src="./res/round.png" alt="round pick">
+                </article>
+                <article class="a2_right_top">
+                    <img class="rt_img" src="./res/round.png" alt="round pick">
+                    <div class="rt_text">Lorem ipsum dolor</div>
+                </article>
             </section>
 
             <section class="section_right_bot"></section>
@@ -39,6 +45,9 @@
 
         <section class="section_infinitie_scroll">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec imperdiet iaculis dolor, at placerat risus mollis a. Curabitur eget orci vel mauris mollis vestibulum. Suspendisse sapien nunc, gravida eget massa quis, dictum posuere mauris. Morbi maximus, sem sit amet semper fermentum, sapien mi egestas metus, sit amet iaculis elit ante at dolor. Proin sodales metus velit, sed vehicula velit hendrerit id. Aenean posuere sollicitudin lectus, a fringilla neque venenatis vel. Maecenas vitae ex eget mauris imperdiet tincidunt. Nunc dui nisl, hendrerit et sem nec, efficitur interdum lacus. Aliquam vehicula nec ante ac laoreet. Proin laoreet augue ac molestie rutrum. Donec.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec imperdiet iaculis dolor, at placerat risus mollis a. Curabitur eget orci vel mauris mollis vestibulum. Suspendisse sapien nunc, gravida eget massa quis, dictum posuere mauris. Morbi maximus, sem sit amet semper fermentum, sapien mi egestas metus, sit amet iaculis elit ante at dolor. Proin sodales metus velit, sed vehicula velit hendrerit id. Aenean posuere sollicitudin lectus, a fringilla neque venenatis vel. Maecenas vitae ex eget mauris imperdiet tincidunt. Nunc dui nisl, hendrerit et sem nec, efficitur interdum lacus. Aliquam vehicula nec ante ac laoreet. Proin laoreet augue ac molestie rutrum. Donec.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec imperdiet iaculis dolor, at placerat risus mollis a. Curabitur eget orci vel mauris mollis vestibulum. Suspendisse sapien nunc, gravida eget massa quis, dictum posuere mauris. Morbi maximus, sem sit amet semper fermentum, sapien mi egestas metus, sit amet iaculis elit ante at dolor. Proin sodales metus velit, sed vehicula velit hendrerit id. Aenean posuere sollicitudin lectus, a fringilla neque venenatis vel. Maecenas vitae ex eget mauris imperdiet tincidunt. Nunc dui nisl, hendrerit et sem nec, efficitur interdum lacus. Aliquam vehicula nec ante ac laoreet. Proin laoreet augue ac molestie rutrum. Donec.
+
         </section>
 
         <section class="section_bottom">
