--- a/Task (22.09)/index.html
+++ b/Task (22.09)/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <button class="goBtn">Go</button>
-    <textarea class="text" rows="5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis auctor elit sed vulputate mi sit amet mauris commodo. Cursus in hac habitasse platea dictumst. Amet venenatis urna cursus eget nunc scelerisque viverra mauris. Habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Pretium aenean pharetra magna ac placerat vestibulum lectus mauris. Scelerisque varius morbi enim nunc faucibus a pellentesque sit amet. Augue lacus viverra vitae congue eu consequat. Laoreet suspendisse interdum consectetur libero id faucibus nisl tincidunt. Mi tempus imperdiet nulla malesuada pellentesque.</textarea>
+    <textarea class="text" rows="5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis auctor elit sed vulputate mi sit amet mauris commodo. Cursus in hac habitasse platea dictumst. Amet venenatis urna cursus eget nunc scelerisque viverra mauris. Habitasse platea dictumst vestibulum rhoncus est pellentesque elit. Pretium aenean pharetra magna ac placerat vestibulum lectus mauris. Scelerisque varius morbi enim nunc faucibus a pellentesque sit amet. Augue lacus viverra vitae congue eu consequat. Laoreet suspendisse interdum consectetur libero id faucibus nisl tincidunt. Mi tempus imperdiet nulla malesuada pellentesque</textarea>
     <div class="main">
 
 
