--- a/Task (15.09)/index.html
+++ b/Task (15.09)/index.html
@@ -11,6 +11,6 @@
     <body>
 
 
-        <script type="text/javascript" src="./js/main.js"></script>
+        <script type="text/javascript" src="./js/mainRework.js"></script>
     </body>
 </html>
