--- a/Task (02.10)/index.html
+++ b/Task (02.10)/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Task 29.09 Classwork</title>
-        <link rel="stylesheet" href="./style/style.css">
-        <link rel="stylesheet" href="./style/normalize.css">
-        </head>
-    
-    <body>
-        <div class="main">
-            <div class="tank">
-                <img src="./res/tank.png">
-            </div>
-            
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Task 29.09 Classwork</title>
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/normalize.css">
+</head>
+
+<body>
+    <div class="main">
+        <div class="tank">
+            <img src="./res/tank.png">
         </div>
+
+    </div>
+    <nav>
         <div class="btnleft" id="buttLeft">Left</div>
         <div class="btnright" id="buttRight">Right</div>
-        <div class="ground"></div>
+    </nav>
+    <div class="ground"></div>
 
-        <script type="text/javascript" src="./js/main.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
 
-    </body>
+</body>
+
 </html>
