--- a/Task (03.10) Classwork/index.html
+++ b/Task (03.10) Classwork/index.html
@@ -24,12 +24,12 @@
         </div>
         <div class="controlPanel">
             <div class="timer">
-                <input type="time" class="timerInput">
+                <input type="time" class="timerInput" value="00:00">
                 <div class="timerIcon"></div>
             </div>
-            <div class="startBtn">
+            <button class="startBtn">
                 <div class="icon-play"></div>
-            </div>
+            </button>
         </div>
     </div>
 
